--- a/doc/api.yaml
+++ b/doc/api.yaml
@@ -47,7 +47,7 @@ components:
           type: number
         description:
           type: string
-        userId:
+        userId: 
           type: string
   responses:
     UnauthorizedError:
@@ -283,6 +283,8 @@ paths:
               type: object
               title: example
               properties:
+                id:
+                  type: string
                 title:
                   type: string
                   description: The board's name
@@ -397,7 +399,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Task"
+                $ref: "#/components/schemas/Task"           
         400:
           description: Bad request
         401:
@@ -442,6 +444,9 @@ paths:
               type: object
               title: example
               properties:
+                id:
+                  type: string
+                  title: The task's ID
                 title:
                   type: string
                   description: The task's title
@@ -460,6 +465,7 @@ paths:
                   type: string
                   description: Column ID
               required:
+                - id
                 - order
                 - boardId
                 - columnId
@@ -519,10 +525,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  token:
-                    type: string
-                description: JWT Token
+                type: string
+                description: JWT Token          
         403:
           description: Incorrect login or password
