--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "cross-env": "6.0.3",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "morgan": "^1.10.0",
     "swagger-ui-express": "4.1.2",
     "uuid": "3.3.3",
+    "winston": "^3.2.1",
     "yamljs": "0.3.0"
   },
   "devDependencies": {
