--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "cross-env": "6.0.3",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "http-errors": "^1.7.3",
+    "http-status-codes": "^1.4.0",
     "morgan": "^1.10.0",
     "swagger-ui-express": "4.1.2",
     "uuid": "3.3.3",
