--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "express": "4.17.1",
     "http-errors": "^1.7.3",
     "http-status-codes": "^1.4.0",
+    "joi": "^14.3.1",
     "morgan": "^1.10.0",
     "swagger-ui-express": "4.1.2",
     "uuid": "3.3.3",
