--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ PORT=4000
 AUTH_MODE=false
 JWT_SECRET_KEY=secret-key
 # Set your database connection information here
-MONGO_CONNECTION_STRING=your-mongo-db-connection-string
+MONGO_CONNECTION_STRING=mongodb+srv://admin:admin@cluster0-7vwgc.mongodb.net/rsschool?retryWrites=true&w=majority
