--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "http-errors": "^1.7.3",
     "http-status-codes": "^1.4.0",
     "joi": "^14.3.1",
+    "joi-objectid": "^3.0.1",
+    "mongoose": "^5.9.9",
     "morgan": "^1.10.0",
     "swagger-ui-express": "4.1.2",
     "uuid": "3.3.3",
