--- a/package.json
+++ b/package.json
@@ -45,16 +45,21 @@
     ]
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "cross-env": "6.0.3",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "express-async-errors": "^3.1.1",
+    "helmet": "^3.22.0",
     "http-errors": "^1.7.3",
     "http-status-codes": "^1.4.0",
     "joi": "^14.3.1",
+    "joi-objectid": "^3.0.1",
+    "mongoose": "^5.9.9",
     "morgan": "^1.10.0",
     "swagger-ui-express": "4.1.2",
     "uuid": "3.3.3",
-    "winston": "^3.3.3",
+    "winston": "^3.2.1",
     "yamljs": "0.3.0"
   },
   "devDependencies": {
