feat: add task5 solution

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     ]
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "cross-env": "6.0.3",
     "dotenv": "8.2.0",
