--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "http-status-codes": "^1.4.0",
     "joi": "^14.3.1",
     "joi-objectid": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.9",
     "morgan": "^1.10.0",
     "swagger-ui-express": "4.1.2",
